--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,2 @@
-user.properties.file=C:\\Users\\Oliver\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+compile.on.save=true
+user.properties.file=D:\\NetbeansUserHome\\8\\userdir\\build.properties
