--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CourseworkProject.jar
+dist.jar=${dist.dir}/EmailSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
